@@ -6649,7 +6649,7 @@
 		</string>
 		<string>
 			<key>Checkbox_Options_SpecialKarmaCost</key>
-			<text>Karmakosten zum Erhöhen von Spezialattributen werden bei Essenzverlust nicht reduziert</text>
+			<text>Karmakosten zum Erhöhen von Spezialattributen (auch Magieradept Kraftpunkte) werden bei Essenzverlust nicht reduziert</text>
 		</string>
 		<string>
 			<key>Checkbox_Options_IgnoreComplexFormLimit</key>
